# starss_acoustic_images

./: .gitignore  README.md  pyproject.toml
starss_representations/: create_combined_annotations.py  generate_acoustic_image_dataset.py  standardise_dataset.py  utils.py
starss_representations/audio/: annotate_with_apgd.py  generate_acoustic_image_dataset.py  generate_json.py  modulate_acoustic_map.py  standardise_dataset.py
starss_representations/video/: annotate_video_with_ground_truth_metadata.py  annotate_with_ground_truth_metadata.py  annotate_with_sam2.py  annotate_with_yolos.py
