[tool.poetry]
name = "starss-representations"
version = "0.1"
authors = ["Huw Cheston <h.cheston@qmul.ac.uk>", "Iran Roman <i.roman@qmul.ac.uk>"]
description = "Generate HDF and JSON files from full resolution STARSS23 dataset"
license = "CC-BY-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "0.11.0"
matplotlib = "*"
numpy = "1.23.5"
pandas = "1.5.3"
tqdm="*"
opencv-python = "*"
torch = "*"
transformers = "*"
scikit-image = "*"
pyunlocbox = "*"
astropy = "*"
h5py = "*"
basemap = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"